[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://ui/Interfaces/crear_perfil/perfil.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[node name="perfil" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.5
margin_top = -105.0
margin_right = 181.5
margin_bottom = 105.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 363.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Ingresa tu nombre:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 363.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
align = 1
max_length = 8
clear_button_enabled = true
placeholder_text = "username"

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 363.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 3 )
text = "¿Eres niño o niña?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 173.0
margin_right = 363.0
margin_bottom = 210.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 179.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Niño"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 183.0
margin_right = 363.0
margin_bottom = 37.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Niña"

[node name="Next" type="Button" parent="."]
anchor_left = 0.934
anchor_top = 0.945
anchor_right = 0.934
anchor_bottom = 0.945
margin_left = -96.2236
margin_top = -27.8221
margin_right = 94.7764
margin_bottom = 27.1779
custom_fonts/font = SubResource( 6 )
text = "Siguiente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -390.0
margin_right = 729.0
margin_bottom = 339.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Portrait"]
margin_right = 729.0
margin_bottom = 250.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Portrait"]
margin_top = 254.0
margin_right = 729.0
margin_bottom = 303.0
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_change_rejected" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_change_rejected"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
